tests/SemanticError/Variables/Test4/BadExpressionType.c
int main(){
	char a;
	a=32+250;
	return 0;
}
